# snifs

./: .envrc  .gitignore  .tool-versions  0-AI-MANIFEST.a2ml  AFFIRMATION.adoc  CHANGELOG.md  CITATION.cff  Containerfile  EXPLAINME.adoc  Justfile  PROOF-NEEDS.md  PROOF-STATUS.md  QUICKSTART-DEV.adoc  QUICKSTART-MAINTAINER.adoc  QUICKSTART-USER.adoc  READINESS.adoc  READINESS.md  README.adoc  README.adoc.invariants.md  ROADMAP.adoc  TEMPLATE-STANDARDS-AUDIT.adoc  TEST-NEEDS.md  ci-checks.exs  eclexiaiser.toml  guix.scm  llm-warmup-dev.md  llm-warmup-user.md  selur-compose.toml  stapeln.toml
.github/: 0.1-AI-MANIFEST.a2ml  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  SECURITY.md  SUPPORT  copilot-instructions.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: codeql.yml  e2e.yml  governance.yml  hypatia-scan.yml  proofs.yml  release.yml  rust-ci.yml  rust-guest-verify.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml  static-analysis-gate.yml
.machine_readable/: CLADE.a2ml  ECOSYSTEM.a2ml  META.a2ml  STATE.a2ml
.machine_readable/6a2/: ECOSYSTEM.a2ml  STATE.a2ml
.machine_readable/6a2/anchor/: ANCHOR.a2ml
.machine_readable/agent_instructions/: README.adoc  debt.a2ml  methodology.a2ml
.machine_readable/ai/: AI.a2ml  PLACEHOLDERS.adoc
.machine_readable/bot_directives/: coverage.a2ml
.machine_readable/compliance/reuse/: dep5
.machine_readable/configs/git-cliff/: cliff.toml
.machine_readable/contractiles/: Justfile  README.adoc
.machine_readable/contractiles/bust/: Bustfile.a2ml
.machine_readable/contractiles/dust/: Dustfile.a2ml
.machine_readable/integrations/: groove.a2ml
.machine_readable/self-validating/: methodology-guard.k9.ncl
.machine_readable/svc/k9/: methodology-guard.k9.ncl
.well-known/: security.txt
benches/: 0.1-AI-MANIFEST.a2ml  assert_safer.py  snif_eval.sh
container/: .gatekeeper.yaml  0.1-AI-MANIFEST.a2ml  Containerfile  manifest.toml
demo/: 0.1-AI-MANIFEST.a2ml  mix.exs
demo/bench/: snif_bench.exs
demo/bench/support/: timing.exs
demo/lib/snif_demo/: application.ex  burble_fft.ex  loader.ex  pool.ex  rust_guest.ex  safe_nif.ex  snif.ex  worker.ex
demo/test/: burble_fft_test.exs  snif_demo_test.exs  snif_metamorphic_test.exs  snif_pool_test.exs  test_helper.exs
docs/: 0.1-AI-MANIFEST.a2ml  RSR_OUTLINE.adoc  proof-debt.adoc  proof-debt.md  tech-debt-2026-05-26.adoc  tech-debt-2026-05-26.md
docs/architecture/: THREAT-MODEL.adoc
docs/archive/: 0.2-AI-MANIFEST.a2ml  TEMPLATE-STANDARDS-AUDIT.adoc
docs/attribution/: CITATION.cff  CITATIONS.adoc  MAINTAINERS.adoc
docs/decisions/: 0000-template.adoc  0001-adopt-rsr-standard.adoc  0005-rust-wasm32-guest-and-verifier.adoc  0006-snif-host-runtime-patched-wasmtime.adoc
docs/developer/: ABI-FFI-README.adoc  TIDY-CONTINUATION-GUIDE.adoc
docs/governance/: 0.2-AI-MANIFEST.a2ml
docs/governance/audit/: 0.3-AI-MANIFEST.a2ml
docs/governance/audit/compliance/: 0.4-AI-MANIFEST.a2ml
docs/governance/audit/effects/: 0.4-AI-MANIFEST.a2ml
docs/governance/audit/systems/: 0.4-AI-MANIFEST.a2ml
docs/governance/maintenance/: 0.3-AI-MANIFEST.a2ml
docs/governance/maintenance/adaptive/: 0.4-AI-MANIFEST.a2ml
docs/governance/maintenance/corrective/: 0.4-AI-MANIFEST.a2ml
docs/governance/maintenance/perfective/: 0.4-AI-MANIFEST.a2ml
docs/governance/planning/: 0.3-AI-MANIFEST.a2ml
docs/governance/planning/could/: 0.4-AI-MANIFEST.a2ml
docs/governance/planning/must/: 0.4-AI-MANIFEST.a2ml
docs/governance/planning/should/: 0.4-AI-MANIFEST.a2ml
docs/papers/: snifs.tex
docs/practice/: AI-CONVENTIONS.adoc  STATE-VISUALIZER-GUIDE.adoc
docs/templates/: 0.2-AI-MANIFEST.a2ml
docs/whitepapers/academic/: snif.tex
examples/: 0.1-AI-MANIFEST.a2ml
rust/: 0.1-AI-MANIFEST.a2ml  Cargo.toml  build-wasm.sh  deny.toml
rust-guest/: 0.1-AI-MANIFEST.a2ml  Cargo.toml  README.adoc
rust-guest/src/: lib.rs
rust/crates/demo-guest/: Cargo.toml
rust/crates/demo-guest/src/: lib.rs
rust/crates/snif-abi/: Cargo.toml
rust/crates/snif-abi/src/: lib.rs
rust/crates/snif-logic/: Cargo.toml
rust/crates/snif-logic/src/: lib.rs
session/: README.adoc
src/interface/ffi/src/: main.zig
tests/e2e/: template_instantiation_test.sh
verification/: README.adoc.invariants.md
verification/proofs/agda/: Properties.agda  SnifIsolation.agda  SnifVerdict.agda
verification/proofs/coq/: TypeSafety.v
verification/proofs/idris2/: Types.idr
verification/proofs/idris2/ABI/: BufferAbi.idr  Compliance.idr  Foreign.idr  Layout.idr  Platform.idr  Pointers.idr
verification/proofs/lean4/: ApiTypes.lean
verification/proofs/tlaplus/: StateMachine.tla
verification/tests/: 0.2-AI-MANIFEST.a2ml  TEST-TAXONOMY.adoc
verification/tools/: abi_conformance.py
zig/: 0.1-AI-MANIFEST.a2ml  buffer_abi_build.sh  build.zig
zig/src/: buffer_abi.zig  burble_fft.zig  safe_nif.zig
